2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Renamed from TODO.org
	Formatting fixed.

2015-04-01  Giuseppe Scrivano  <gscrivan@redhat.com>

	* TODO.org: Add new file.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add module readdir.
	(gnulib_modules): Likewise.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* src/cockroach.c (main): Call plugins_load_dir.
	(cockroach_print_help): Help string updated to reflect the new
	semantics of --plugin and --load-plugins.
	(main): Updated to handle ADD_PLUGIN_ARG and PLUGIN_ARG command
	line options.
	(ADD_PLUGIN_ARG): New enum.
	(PLUGIN_ARG): Renamed from PLUGIN_ADD_ARG.
	(main): Print an error message and exit with an error status if
	the loading of a plugin fails.

	* src/plugins.c (plugins_load_dir): New function.

	* src/Makefile.am: Include Makefile.am.common.
	(AM_CPPFLAGS): Define PLUGINDIR.

2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* Makefile.am.common: New file.
	(plugindir): Defined.

	* src/plugins/inhibit/Makefile.am: Include Makefile.am.common.
	(plugin_LTLIBRARIES): Renamed from lib_LTLIBRARIES.

	* src/plugins/fail_mem/Makefile.am: Include Makefile.am.common.
	(plugin_LTLIBRARIES): Renamed from lib_LTLIBRARIES.



2015-03-30  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am: Updated.
	* src/config.h.in: Likewise.

2015-03-30  Jose E. Marchesi  <jemarch@gnu.org>

	install plugins without the 'lib' prefix.
	* src/plugins/fail_mem/Makefile.am (lib_LTLIBRARIES): libfail_mem
	renamed to fail_mem.
	(fail_mem_la_SOURCES): Renamed from libfail_mem_la_SOURCES.
	(fail_mem_la_LDFLAGS): Renamed from libfail_mem_la_LDFLAGS.
	* src/plugins/fail_mem/Makefile.am (libfail_mem_la_LDFLAGS): Use
	-module.

	* src/plugins/inhibit/Makefile.am (lib_LTLIBRARIES): libinhibit
	renamed to inhibit.
	(inhibit_la_SOURCES): Renamed from libinhibit_la_SOURCES.
	(inhibit_la_LDFLAGS): Renamed from libinhibit_la_LDFLAGS.
	(inhibit_la_LDFLAGS): Use -module.
