@@ -1,3 +1,11 @@
+2015-04-02  Giuseppe Scrivano  <gscrivan@redhat.com>
+
+	* src/roach.c (roach_wait): Pass the pid of the stopped process to
+	the hook function.
+	* src/roach.h: Add argument "pid" to roach_syscall_inhibit.
+	* src/arch/linux_generic.c (roach_syscall_inhibit): Add argument "pid".
+	* src/plugins/fail_mem/fail_mem.c (fail_mem): Likewise.
+
 2015-04-01  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* TODO: Renamed from TODO.org
